--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;1,200&display=swap');
 
 
 
@@ -8,10 +8,12 @@
   padding: 5px;
 }
 header{
-  background-color: #573280;
+  background: rgb(104, 59, 150);
+  /*background-color: #573280;*/
   color: #fdfdfd;
   font-family: 'Source Code Pro', Arial, Helvetica, sans-serif;
   padding: 5px;
+  margin-bottom: 30px;
   
   
 }
@@ -41,8 +43,8 @@ header{
      font-weight: bold;
   }
   div.card-body, .card-title, .list-unstyled, div.card, ul.list-group {
-    background-color: #E072A4;
-    border-color: #E072A4;
+    background-color: #ff6daf;
+    border-color: #e072a38a;
 
   }
 
@@ -97,9 +99,12 @@ img.img-fluid{
   h6{
     text-align: center;
   }
-  h1 {
-    font-size: 7.5rem;
+  h1.titulo{
+    text-align: center;
+    font-family: 'Play', sans-serif;
+    font-size: 5rem;
     text-shadow: #573280;
+    font-weight: 700;
   }
  .carousel-item{
   width: 100%;
@@ -107,7 +112,7 @@ img.img-fluid{
  } 
 .card{
   border-radius: 49px;
-  background: #E072A4;
+  background: #e072a38a;
   box-shadow:  -4px -4px 9px #453f4237,
   4px 4px 9px #7b6f7433;
 }
@@ -142,10 +147,10 @@ footer {
 }
 
 .fondo2{
-  background-color: #E072A4;
+  background-color: #e072a38a;
 }
 .fondo{
-  background-color: #D2D7DF;
+  background-color: #d9dfe8;
 
 }
 main.formulario{
